# EEPROM_Database

./: .gitignore  CMakeLists.txt  Makefile  Makefile.cpp  README.md
.github/workflows/: ci.yml
cpp/: database.cpp  factory_defaults.cpp
inc/: EEPROM_Mapping.h  database.h  datatypes.h  porting.h
include/: EEDatabase.hpp
src/: EEDatabase.cpp  EEPROM_Mapping.c  database.c  factory_defaults.c  test.c
tests/: CMakeLists.txt  test_database.cpp
